--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
   <head>
     <title>Rhys Williams</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="8-Bit.png">
   </head>
   <body>
-    <p>Welcome to my website</p>
-    <p>💽⛓️‍💥🌎🕰️🐉🏘️🌺🎤🎭💃👨🏼‍💻➕👥✖️🔟</p>
+    <nav>
+      <button>Home</button>
+      <a href="news.html"><button>News</button></a>
+      <a href="other.html"><button>Other</button></a>
+    </nav>
+    <main>
+      <p>Welcome to my website</p>
+      <iframe style="border: 0; width: 200px; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=1672088590/size=small/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=none/transparent=true/" seamless><a href="https://rhyswilliams.bandcamp.com/track/rain-demo">Rain (Demo) by Rhys Williams</a></iframe>
+    </main>
   </body>
 </html>
