--- a/news.html
+++ b/news.html
@@ -5,8 +5,12 @@
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="8-Bit.png">
   </head>
-  <body>
-    nothing new
+  <body style="background-color: #abbfe0;">
+    <br>TOTAL ARCHIVE PROJECT (589 ideas total)<br><br>
+    28 songs left to record<br><br>
+    2 songs left to produce<br><br>
+    NEXT RELEASE: #57<br><br>
+    Needs to be re-recorded, mixed, mastered, and given artwork<br><br>
     <a href="index.html"><button>Back</button></a>
   </body>
 </html>
