--- a/other.html
+++ b/other.html
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="other.png">
   </head>
-  <body>💽⛓️‍💥🌎🕰️🐉🏘️🌺🎤🎭💃👨🏼‍💻➕👥✖️🔟</body>
+  <body style="background-color: #b9b4bf;">💽⛓️‍💥🌎🕰️🐉🏘️🌺🎤🎭💃👨🏼‍💻➕👥✖️🔟<br></body>
   <a href="index.html"><button>Back</button></a>
 </html>
