--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
       <a href="news.html"><button>News</button></a>
       <a href="other.html"><button>Other</button></a>
     </nav>
+    <img src="Banner.jpg" class="banner">
     <main>
       <p>Welcome to my website</p>
-      <iframe style="border: 0; width: 200px; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=1672088590/size=small/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=none/transparent=true/" seamless><a href="https://rhyswilliams.bandcamp.com/track/rain-demo">Rain (Demo) by Rhys Williams</a></iframe>
+      <div class="song-box">
+        <br><img src="Rain (Demo).jpg">
+        <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="Bandcamp.png" class="icon"></a>
+        <a href="https://soundcloud.com/rhyswilliams/rain-demo" target="_blank"><img src="Soundcloud.png" class="icon"></a>
+        <p>Rain (Demo)</p>
+        <p>★★★☆☆</p>
+        <p>#003</p>
+      </div>
     </main>
   </body>
 </html>
