--- a/news.html
+++ b/news.html
@@ -8,9 +8,15 @@
   <body style="background-color: #abbfe0;">
     <br>TOTAL ARCHIVE PROJECT (589 ideas total)<br><br>
     28 songs left to record<br><br>
-    2 songs left to produce<br><br>
-    NEXT RELEASE: #57<br><br>
-    Needs to be re-recorded, mixed, mastered, and given artwork<br><br>
+    2(+28) songs left to produce<br><br>
+    UPCOMING RELEASES:<br>
+    Idea #57 - Pop Ballad<br>
+    Idea #91 - Orchestral<br>
+    Ideas #78, 80, 82, 83, 110 - Electronic Orchestra
+    <br><br>
+    #57 needs to be re-recorded, mixed, mastered, and given artwork<br>
+    #91 needs to be remastered<br>
+    #78+ need to be remastered<br><br>
     <a href="index.html"><button>Back</button></a>
   </body>
 </html>
