--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Rhys Williams</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" href="8-Bit.png">
   </head>
   <body>
