--- a/other.html
+++ b/other.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>???</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" href="other.png">
   </head>
   <body style="background-color: #b9b4bf;">💽⛓️‍💥🌎🕰️🐉🏘️🌺🎤🎭💃👨🏼‍💻➕👥✖️🔟<br></body>
