--- a/news.html
+++ b/news.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rhys News</title>
+    <title>Rhys Williams</title>
     <link rel="stylesheet" type="text/css" href="styles.css"">
     <link rel="icon" href="8-Bit.png">
   </head>
   <body style="background-color: #abbfe0;">
-    <br>TOTAL ARCHIVE PROJECT (589 ideas total)<br><br>
+    <br>TOTAL ARCHIVE PROJECT (583 ideas total)<br><br>
     29 songs left to record<br><br>
     2(+29) songs left to produce<br><br>
     UPCOMING RELEASES:<br>
