--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
   <head>
     <title>Rhys Williams</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" href="8-Bit.png">
+    <link rel="icon" href="8bit.png">
   </head>
   <body>
     <nav>
-      <button>Home</button>
+      <a href="index.html"><button>Home</button></a>
       <a href="news.html"><button>News</button></a>
+      <a href="contact.html"><button>Contact</button></a>
       <a href="other.html"><button>Other</button></a>
     </nav>
-    <img src="Banner.jpg" class="banner">
+    <img src="banner.jpg" class="banner">
     <main>
       <p>Welcome to my website</p>
       <div class="song-box">
-        <br><img src="Rain (Demo).jpg">
-        <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="Bandcamp.png" class="icon"></a>
-        <a href="https://soundcloud.com/rhyswilliams/rain-demo" target="_blank"><img src="Soundcloud.png" class="icon"></a>
+        <br><img src="rain-demo.jpg">
+        <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="bandcamp.png" class="icon"></a>
+        <a href="https://soundcloud.com/rhyswilliams/rain-demo" target="_blank"><img src="soundcloud.png" class="icon"></a>
         <p>Rain (Demo)</p>
         <p>★★★☆☆</p>
         <p>#002</p>
