--- a/news.html
+++ b/news.html
@@ -3,20 +3,27 @@
   <head>
     <title>Rhys Williams</title>
     <link rel="stylesheet" type="text/css" href="styles.css"">
-    <link rel="icon" href="8-Bit.png">
+    <link rel="icon" href="8bit.png">
   </head>
   <body style="background-color: #abbfe0;">
-    <br>TOTAL ARCHIVE PROJECT (583 ideas total)<br><br>
-    30 songs left to record<br><br>
-    2(+30) songs left to produce<br><br>
-    UPCOMING RELEASES:<br>
-    Idea #33 - Pop Ballad<br>
-    Idea #90 - Orchestral<br>
-    Ideas #77, 79, 81, 82, 108 - Electronic Orchestra
-    <br><br>
-    #33 needs to be re-recorded, mixed, mastered, and given artwork<br>
-    #90 needs to be remastered<br>
-    #77+ need to be remastered<br><br>
-    <a href="index.html"><button>Back</button></a>
+    <nav>
+      <a href="index.html"><button>Home</button></a>
+      <a href="news.html"><button>News</button></a>
+      <a href="contact.html"><button>Contact</button></a>
+      <a href="other.html"><button>Other</button></a>
+    </nav>
+    <main>
+      <br>TOTAL ARCHIVE PROJECT (583 ideas total)<br><br>
+      30 songs left to record<br><br>
+      2(+30) songs left to produce<br><br>
+      UPCOMING RELEASES:<br>
+      Idea #33 - Pop Ballad<br>
+      Idea #90 - Orchestral<br>
+      Ideas #77, 79, 81, 82, 108 - Electronic Orchestra
+      <br><br>
+      #33 needs to be re-recorded, mixed, mastered, and given artwork<br>
+      #90 needs to be remastered<br>
+      #77+ need to be remastered
+    </main>
   </body>
 </html>
