--- a/other.html
+++ b/other.html
@@ -5,6 +5,13 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" href="other.png">
   </head>
-  <body style="background-color: #b9b4bf;">💽⛓️‍💥🌎🕰️🐉🏘️🌺🎤🎭💃👨🏼‍💻➕👥✖️🔟<br></body>
-  <a href="index.html"><button>Back</button></a>
+  <body style="background-color: #b9b4bf;">
+    <nav>
+      <a href="index.html"><button>Home</button></a>
+      <a href="news.html"><button>News</button></a>
+      <a href="contact.html"><button>Contact</button></a>
+      <a href="other.html"><button>Other</button></a>
+    </nav>
+    <main><p class="other-text">💽⛓️‍💥🌎🕰️🐉🏘️🌺🎤🎭💃👨🏼‍💻➕👥✖️🔟</p></main>
+  </body>
 </html>
