--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </nav>
     <img src="banner.jpg" class="banner">
     <main>
-      <p>Welcome to my website</p>
+      <p class="title-text">RHYS WILLIAMS</p>
       <div class="song-box">
         <br><img src="rain-demo.jpg">
         <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="bandcamp.png" class="icon"></a>
