--- a/contact.html
+++ b/contact.html
@@ -25,5 +25,6 @@
         <a href="https://www.linkedin.com/in/rhyslw5/" target="_blank"><img src="linkedin.png" class="icon"></a>
       </div>
     </main>
+    <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
   </body>
 </html>
