--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
         <p>#002</p>
       </div>
     </main>
+    <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
   </body>
 </html>
