--- a/news.html
+++ b/news.html
@@ -13,17 +13,17 @@
       <a href="other.html"><button>Other</button></a>
     </nav>
     <main>
-      <br>TOTAL ARCHIVE PROJECT (583 ideas total)<br><br>
-      21 songs left to record<br><br>
-      10(+21) songs left to produce<br><br>
-      UPCOMING RELEASES:<br>
-      Idea #33 - Pop Ballad<br>
-      Idea #90 - Orchestral<br>
-      Ideas #77, 79, 81, 82, 108 - Electronic Orchestra
-      <br><br>
-      #33 needs to be re-recorded, mixed, mastered, and given artwork<br>
-      #90 needs to be remastered<br>
-      #77+ need to be remastered
+      <p>TOTAL ARCHIVE PROJECT (583 ideas total)</p>
+      <p>21 songs left to record</p>
+      <p>10(+21) songs left to produce</p>
+      <p>UPCOMING RELEASES:<br>
+        Idea #33 - Pop Ballad<br>
+        Idea #90 - Orchestral<br>
+        Ideas #77, 79, 81, 82, 108 - Electronic Orchestra</p>
+      <p>#33 needs to be re-recorded, mixed, mastered, and given artwork<br>
+        #90 needs to be remastered<br>
+        #77+ need to be remastered</p>
     </main>
+    <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
   </body>
 </html>
