--- a/other.html
+++ b/other.html
@@ -13,5 +13,6 @@
       <a href="other.html"><button>Other</button></a>
     </nav>
     <main><p class="other-text">💽⛓️‍💥🌎🕰️🐉🏘️🌺🎤🎭💃👨🏼‍💻➕👥✖️🔟</p></main>
+    <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
   </body>
 </html>
