--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         <br><img src="rain-demo.jpg">
         <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="bandcamp.png" class="icon"></a>
         <a href="https://soundcloud.com/rhyswilliams/rain-demo" target="_blank"><img src="soundcloud.png" class="icon"></a>
-        <p>Rain (Demo)</p>
-        <p>★★★☆☆</p>
-        <p>#002</p>
+        <div class="song-box-info">
+          <p>Rain (Demo)</p>
+          <p>★★★☆☆</p>
+          <p>#002</p>
+        </div>
+        <p class="write-date">Sep 15, 2008</p>
       </div>
     </main>
     <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
