--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <link rel="icon" href="8bit.png">
   </head>
   <body>
-    <nav>
-      <a href="index.html"><button>Home</button></a>
-      <a href="news.html"><button>News</button></a>
-      <a href="contact.html"><button>Contact</button></a>
-      <a href="other.html"><button>Other</button></a>
-    </nav>
-    <img src="banner.jpg" class="banner">
+    <div class="banner">
+      <nav>
+        <a href="index.html"><button>Home</button></a>
+        <a href="news.html"><button>News</button></a>
+        <a href="contact.html"><button>Contact</button></a>
+        <a href="other.html"><button>Other</button></a>
+      </nav>
+    </div>
     <main>
       <p class="title-text">RHYS WILLIAMS</p>
       <div class="song-box">
