--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" href="8bit.png">
   </head>
-  <body>
+  <body class="contact-body">
     <nav>
       <a href="index.html"><button>Home</button></a>
       <a href="news.html"><button>News</button></a>
