--- a/other.html
+++ b/other.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" href="other.png">
   </head>
-  <body style="background-color: #b9b4bf;">
+  <body class="other-body">
     <nav>
       <a href="index.html"><button>Home</button></a>
       <a href="news.html"><button>News</button></a>
