--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <main>
       <p class="title-text">RHYS WILLIAMS</p>
+      <p class="descriptor">Singer, songwriter, producer, and instrumentalist</p>
       <div class="song-box">
         <br><img src="rain-demo.jpg">
         <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="bandcamp.png" class="icon"></a>
