--- a/index.html
+++ b/index.html
@@ -17,16 +17,28 @@
     <main>
       <p class="title-text">RHYS WILLIAMS</p>
       <p class="descriptor">Singer, songwriter, producer, and instrumentalist</p>
-      <div class="song-box">
-        <br><img src="rain-demo.jpg">
-        <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="bandcamp.png" class="icon"></a>
-        <a href="https://soundcloud.com/rhyswilliams/rain-demo" target="_blank"><img src="soundcloud.png" class="icon"></a>
-        <div class="song-box-info">
-          <p>Rain (Demo)</p>
-          <p>★★★☆☆</p>
-          <p>#002</p>
+      <div class="song-box-container">
+        <div class="song-box">
+          <br><img src="youre-gone.jpg" class="song-icon">
+          <br><a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><img src="bandcamp.png" class="icon"></a>
+          <div class="song-box-info">
+            <p>You're Gone</p>
+            <p>★★★☆☆</p>
+            <p>#033</p>
+          </div>
+          <p class="write-date">Feb 16, 2015</p>
         </div>
-        <p class="write-date">Sep 15, 2008</p>
+        <div class="song-box">
+          <br><img src="rain-demo.jpg" class="song-icon">
+          <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="bandcamp.png" class="icon"></a>
+          <a href="https://soundcloud.com/rhyswilliams/rain-demo" target="_blank"><img src="soundcloud.png" class="icon"></a>
+          <div class="song-box-info">
+            <p>Rain (Demo)</p>
+            <p>★★★☆☆</p>
+            <p>#002</p>
+          </div>
+          <p class="write-date">Sep 15, 2008</p>
+        </div>
       </div>
     </main>
     <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
