--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     </div>
     <main>
       <p class="title-text">RHYS WILLIAMS</p>
-      <p class="descriptor">Singer, songwriter, producer, and instrumentalist</p>
+      <p class="descriptor">Singer, songwriter, producer, and multi-instrumentalist</p>
       <div class="song-box-container">
         <div class="song-box">
           <br><img src="youre-gone.jpg" class="song-icon">
           <br><a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><img src="bandcamp.png" class="icon"></a>
           <div class="song-box-info">
             <p>You're Gone</p>
-            <p>★★★☆☆</p>
+            <p>★★★★☆</p>
             <p>#033</p>
           </div>
           <p class="write-date">Feb 16, 2015</p>
@@ -32,6 +32,7 @@
           <br><img src="rain-demo.jpg" class="song-icon">
           <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="bandcamp.png" class="icon"></a>
           <a href="https://soundcloud.com/rhyswilliams/rain-demo" target="_blank"><img src="soundcloud.png" class="icon"></a>
+          <a href="https://youtu.be/l-Ne2hvspPc" target="_blank"><img src="youtube.jpg" class="icon"></a>
           <div class="song-box-info">
             <p>Rain (Demo)</p>
             <p>★★★☆☆</p>
