--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="song-box">
           <br><img src="youre-gone.jpg" class="song-icon">
           <br><a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><img src="bandcamp.png" class="icon"></a>
+          <a href="https://soundcloud.com/rhyswilliams/youre-gone" target="_blank"><img src="soundcloud.png" class="icon"></a>
           <div class="song-box-info">
             <p>You're Gone</p>
             <p>★★★★☆</p>
