--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <br><img src="youre-gone.jpg" class="song-icon">
           <br><a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><img src="bandcamp.png" class="icon"></a>
           <a href="https://soundcloud.com/rhyswilliams/youre-gone" target="_blank"><img src="soundcloud.png" class="icon"></a>
+          <a href="https://youtu.be/mKC6StyvP3s" target="_blank"><img src="youtube.jpg" class="icon"></a>
           <div class="song-box-info">
             <p>You're Gone</p>
             <p>★★★★☆</p>
