--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <a href="https://rhyswilliams.bandcamp.com" target="_blank"><img src="bandcamp.png" class="icon"></a>
         <a href="https://soundcloud.com/rhyswilliams" target="_blank"><img src="soundcloud.png" class="icon"></a>
         <a href="https://open.spotify.com/user/rhysisawesome" target="_blank"><img src="spotify.png" class="icon"></a>
-        <a href="https://www.youtube.com/@RhysSong" target="_blank"><img src="youtube.jpg" class="icon"></a><br>
+        <a href="https://www.youtube.com/@rhysdoesmusic" target="_blank"><img src="youtube.jpg" class="icon"></a><br>
         <a href="https://bsky.app/profile/rhysdoeseverything.bsky.social" target="_blank"><img src="bluesky.svg" class="icon"></a>
         <a href="https://www.instagram.com/rhysdoeseverything/" target="_blank"><img src="instagram.png" class="icon"></a>
         <a href="https://www.facebook.com/rhys.lauer.williams/" target="_blank"><img src="facebook.png" class="icon"></a>
