--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <br><img src="springtime.jpg" class="song-icon">
           <br><a href="https://rhyswilliams.bandcamp.com/track/springtime" target="_blank"><img src="bandcamp.png" class="icon"></a>
           <a href="https://soundcloud.com/rhyswilliams/springtime" target="_blank"><img src="soundcloud.png" class="icon"></a>
+          <a href="https://youtu.be/xNwy5hwzKbA" target="_blank"><img src="youtube.jpg" class="icon"></a>
           <div class="song-box-info">
             <p>Springtime</p>
             <p>★★★☆☆</p>
