--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <title>Rhys Williams</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" href="8bit.png">
+    <link rel="icon" href="images/8bit.png">
   </head>
   <body class="contact-body">
     <nav>
@@ -15,14 +15,18 @@
     <main>
       <p class="contact-text">THE WALL OF SOCIAL MEDIA</p>
       <div class="contacts">
-        <a href="https://rhyswilliams.bandcamp.com" target="_blank"><img src="bandcamp.png" class="icon"></a>
-        <a href="https://soundcloud.com/rhyswilliams" target="_blank"><img src="soundcloud.png" class="icon"></a>
-        <a href="https://open.spotify.com/user/rhysisawesome" target="_blank"><img src="spotify.png" class="icon"></a>
-        <a href="https://www.youtube.com/@rhysdoesmusic" target="_blank"><img src="youtube.jpg" class="icon"></a><br>
-        <a href="https://bsky.app/profile/rhysdoeseverything.bsky.social" target="_blank"><img src="bluesky.svg" class="icon"></a>
-        <a href="https://www.instagram.com/rhysdoeseverything/" target="_blank"><img src="instagram.png" class="icon"></a>
-        <a href="https://www.facebook.com/rhys.lauer.williams/" target="_blank"><img src="facebook.png" class="icon"></a>
-        <a href="https://www.linkedin.com/in/rhyslw5/" target="_blank"><img src="linkedin.png" class="icon"></a>
+        <a href="https://rhyswilliams.bandcamp.com" target="_blank"><img src="images/bandcamp.png" class="icon"></a>
+        <a href="https://soundcloud.com/rhyswilliams" target="_blank"><img src="images/soundcloud.png" class="icon"></a>
+        <a href="https://open.spotify.com/user/rhysisawesome" target="_blank"><img src="images/spotify.png" class="icon"></a>
+        <a href="https://www.youtube.com/@rhysdoesmusic" target="_blank"><img src="images/youtube.jpg" class="icon"></a><br>
+        <a href="https://bsky.app/profile/rhysdoeseverything.bsky.social" target="_blank"><img src="images/bluesky.svg" class="icon"></a>
+        <a href="https://instagram.com/rhysdoeseverything/" target="_blank"><img src="images/instagram.png" class="icon"></a>
+        <a href="https://facebook.com/rhys.lauer.williams/" target="_blank"><img src="images/facebook.png" class="icon"></a>
+        <a href="https://linkedin.com/in/rhyslw5/" target="_blank"><img src="images/linkedin.png" class="icon"></a><br>
+        <a href="https://patreon.com/user?u=72179631" target="_blank"><img src="images/patreon.png" class="icon"></a>
+        <a href="https://x.com/rhysdoesmusic" target="_blank"><img src="images/twitter.png" class="icon"></a>
+        <a href="https://www.paypal.com/paypalme/rhysmusic" target="_blank"><img src="images/paypal.png" class="icon"></a>
+        <a href="https://nomadmania.com/profile/67032" target="_blank"><img src="images/nomadmania.png" class="icon"></a>
       </div>
     </main>
     <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
