--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Rhys Williams</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" href="8bit.png">
+    <link rel="icon" href="images/8bit.png">
   </head>
   <body>
     <div class="banner">
@@ -19,10 +19,10 @@
       <p class="descriptor">Singer, songwriter, producer, and multi-instrumentalist</p>
       <div class="song-box-container">
         <div class="song-box">
-          <br><img src="springtime.jpg" class="song-icon">
-          <br><a href="https://rhyswilliams.bandcamp.com/track/springtime" target="_blank"><img src="bandcamp.png" class="icon"></a>
-          <a href="https://soundcloud.com/rhyswilliams/springtime" target="_blank"><img src="soundcloud.png" class="icon"></a>
-          <a href="https://youtu.be/xNwy5hwzKbA" target="_blank"><img src="youtube.jpg" class="icon"></a>
+          <br><img src="images/springtime.jpg" class="song-icon">
+          <br><a href="https://rhyswilliams.bandcamp.com/track/springtime" target="_blank"><img src="images/bandcamp.png" class="icon"></a>
+          <a href="https://soundcloud.com/rhyswilliams/springtime" target="_blank"><img src="images/soundcloud.png" class="icon"></a>
+          <a href="https://youtu.be/xNwy5hwzKbA" target="_blank"><img src="images/youtube.jpg" class="icon"></a>
           <div class="song-box-info">
             <p>Springtime</p>
             <p>★★★☆☆</p>
@@ -31,10 +31,10 @@
           <p class="write-date">Aug 28, 2017</p>
         </div>
         <div class="song-box">
-          <br><img src="youre-gone.jpg" class="song-icon">
-          <br><a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><img src="bandcamp.png" class="icon"></a>
-          <a href="https://soundcloud.com/rhyswilliams/youre-gone" target="_blank"><img src="soundcloud.png" class="icon"></a>
-          <a href="https://youtu.be/mKC6StyvP3s" target="_blank"><img src="youtube.jpg" class="icon"></a>
+          <br><img src="images/youre-gone.jpg" class="song-icon">
+          <br><a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><img src="images/bandcamp.png" class="icon"></a>
+          <a href="https://soundcloud.com/rhyswilliams/youre-gone" target="_blank"><img src="images/soundcloud.png" class="icon"></a>
+          <a href="https://youtu.be/mKC6StyvP3s" target="_blank"><img src="images/youtube.jpg" class="icon"></a>
           <div class="song-box-info">
             <p>You're Gone</p>
             <p>★★★★☆</p>
@@ -43,10 +43,10 @@
           <p class="write-date">Feb 16, 2015</p>
         </div>
         <div class="song-box">
-          <br><img src="rain-demo.jpg" class="song-icon">
-          <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="bandcamp.png" class="icon"></a>
-          <a href="https://soundcloud.com/rhyswilliams/rain-demo" target="_blank"><img src="soundcloud.png" class="icon"></a>
-          <a href="https://youtu.be/l-Ne2hvspPc" target="_blank"><img src="youtube.jpg" class="icon"></a>
+          <br><img src="images/rain-demo.jpg" class="song-icon">
+          <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="images/bandcamp.png" class="icon"></a>
+          <a href="https://soundcloud.com/rhyswilliams/rain-demo" target="_blank"><img src="images/soundcloud.png" class="icon"></a>
+          <a href="https://youtu.be/l-Ne2hvspPc" target="_blank"><img src="images/youtube.jpg" class="icon"></a>
           <div class="song-box-info">
             <p>Rain (Demo)</p>
             <p>★★★☆☆</p>
