--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
   <head>
     <title>Rhys Williams</title>
     <link rel="stylesheet" type="text/css" href="styles.css"">
-    <link rel="icon" href="8bit.png">
+    <link rel="icon" href="images/8bit.png">
   </head>
   <body class="news-body">
     <nav>
