--- a/other.html
+++ b/other.html
@@ -3,7 +3,7 @@
   <head>
     <title>???</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" href="other.png">
+    <link rel="icon" href="images/other.png">
   </head>
   <body class="other-body">
     <nav>
