--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Rhys Williams</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" href="images/8bit.png">
+    <link rel="icon" href="8bit.png">
   </head>
   <body>
     <div class="banner">
@@ -55,6 +55,36 @@
           <p class="write-date">Sep 15, 2008</p>
         </div>
       </div>
+      <div id="mc_embed_shell">
+        <link rel="stylesheet" type="text/css" href="//cdn-images.mailchimp.com/embedcode/classic-061523.css">
+        <style type="text/css">
+        #mc_embed_signup{background:#d8dcf1; border: 1px solid black; border-radius: 5px; clear:left; font:14px Helvetica,Arial,sans-serif; width: 500px; margin-top: 35px; margin-bottom: 20px;}
+        /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+        We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup" style="justify-self: center;">
+          <form action="https://rhyswilliamsmusic.us11.list-manage.com/subscribe/post?u=83ae690584ca2311238b9198b&amp;id=7cc8367d50&amp;f_id=005c19e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+            <div id="mc_embed_signup_scroll"><h2 style="margin-bottom:-10px;">Sign up for updates!</h2>
+              <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+              <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
+              <div id="mce-responses" class="clear foot">
+                <div class="response" id="mce-error-response" style="display: none;"></div>
+                <div class="response" id="mce-success-response" style="display: none;"></div>
+              </div>
+              <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+                <input type="text" name="b_83ae690584ca2311238b9198b_7cc8367d50" tabindex="-1" value="">
+              </div>
+              <div class="optionalParent">
+                <div class="clear foot">
+                  <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+        <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='COMPANY';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+      </div>  
     </main>
     <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
   </body>
