--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <nav>
         <a href="index.html"><button>Home</button></a>
         <a href="news.html"><button>News</button></a>
-        <a href="contact.html"><button>Contact</button></a>
-        <a href="other.html"><button>Other</button></a>
+        <a href="https://linktr.ee/rhyswilliams" target="_blank"><button>Contact</button></a>
+        <a href="more.html"><button>More</button></a>
       </nav>
     </div>
     <main>
