--- a/news.html
+++ b/news.html
@@ -2,24 +2,36 @@
 <html>
   <head>
     <title>Rhys Williams</title>
-    <link rel="stylesheet" type="text/css" href="styles.css"">
-    <link rel="icon" href="images/8bit.png">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" href="news.png">
   </head>
   <body class="news-body">
     <nav>
       <a href="index.html"><button>Home</button></a>
       <a href="news.html"><button>News</button></a>
-      <a href="contact.html"><button>Contact</button></a>
-      <a href="other.html"><button>Other</button></a>
+      <a href="https://linktr.ee/rhyswilliams" target="_blank"><button>Contact</button></a>
+      <a href="more.html"><button>More</button></a>
     </nav>
     <main>
-      <p>TOTAL ARCHIVE PROJECT (583 ideas total)</p>
-      <p>21 songs left to record</p>
-      <p>10(+21) songs left to produce</p>
-      <p>UPCOMING RELEASES:<br>
-        Ideas #77, 79, 81, 82, 108 - Electronic Orchestra</p>
-        #77, 79, 81, 82, 108 need to be remastered</p>
+      <br><b>May 6, 2025</b>
+      <p>A lot of work was done on the website today.</p>
+      <p>I managed to start a <a href="index.html#mc_embed_shell">mailing list</a>!</p>
+      <p>My <a href="https://www.patreon.com/c/user?u=72179631" target="_blank">Patreon</a> was created and the Contact page was replaced with my new <a href="https://linktr.ee/rhyswilliams" target="_blank">Linktree</a>.</p>
+      <p>I did some serious research into distribution and made a final decision.</p>
+      <p>I joined some artist/production Facebook groups.</p>
+      <p>I did a little promotion on my <a href="https://youtu.be/jt7dtCIIqEk" target="_blank">newest mashup</a>.</p>
+      <p>I finished listening to and published an <a href="https://open.spotify.com/playlist/5cToUH4ABFrzimPRPqKyoW?si=ff342fd8d03444be" target="_blank">old playlist</a>.</p>
+      <br><b>May 2, 2025</b>
+      <p>Release of "<a href="https://rhyswilliams.bandcamp.com/track/springtime" target="_blank">Springtime</a>"</p>
+      <br><b>Apr 29, 2025</b>
+      <p>Release of "<a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank">You're Gone</a>"</p>
+      <br><b>Apr 8, 2025</b>
+      <p>Website uploaded through <a href="https://github.com/rhyslw5/rhyswilliamsmusic" target="_blank">GitHub Pages</a></p>
+      <br><b>Mar 25, 2025</b>
+      <p>Release of "<a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank">Rain (Demo)</a>"</p>
+      <br><b>FUTURE???</b>
+      <p>I'm currently re-mixing a few songs I made through Sibelius MIDI from 2016-2018.</p>
     </main>
-    <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
+    <footer><p>💽⛓️‍💥🌎🕰️🐉🏘️🌺🎤🎭💃👨🏼‍💻➕👥✖️🔟</p></footer>
   </body>
 </html>
