--- a/more.html
+++ b/more.html
@@ -10,7 +10,7 @@
       <a href="index.html"><button>Home</button></a>
       <a href="news.html"><button>News</button></a>
       <a href="https://linktr.ee/rhyswilliams" target="_blank"><button>Contact</button></a>
-      <a href="other.html"><button>Other</button></a>
+      <a href="other.html"><button>More</button></a>
     </nav>
     <main>
       <br><b>Travel</b><br>
