--- a/more.html
+++ b/more.html
@@ -14,7 +14,7 @@
     </nav>
     <main>
       <br><b>Travel</b><br>
-      <iframe style="border: none; margin:0px; padding:0px; display:inline-block; width:300px; height:250px; overflow:hidden;" src="https://nomadmania.com/api/snippet/67032/s"></iframe>
+      <iframe style="border: none; margin:0px; margin-top: 10px; padding:0px; display:inline-block; width:300px; height:250px; overflow:hidden;" src="https://nomadmania.com/api/snippet/67032/s"></iframe>
     </main>
     <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
   </body>
