--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <a href="more.html"><button>More</button></a>
       </nav>
     </div>
+    <div class="sidebar1"></div>
+    <div class="sidebar2"></div>
     <main>
       <p class="title-text">RHYS WILLIAMS</p>
       <p class="descriptor">Singer, songwriter, producer, and multi-instrumentalist</p>
