--- a/more.html
+++ b/more.html
@@ -12,6 +12,8 @@
       <a href="https://linktr.ee/rhyswilliams" target="_blank"><button>Contact</button></a>
       <a href="more.html"><button>More</button></a>
     </nav>
+    <div class="sidebar1"></div>
+    <div class="sidebar2"></div>
     <main>
       <br><b>Travel</b><br>
       <iframe style="border: none; margin:0px; margin-top: 10px; padding:0px; display:inline-block; width:300px; height:250px; overflow:hidden;" src="https://nomadmania.com/api/snippet/67032/s"></iframe>
