--- a/news.html
+++ b/news.html
@@ -12,6 +12,8 @@
       <a href="https://linktr.ee/rhyswilliams" target="_blank"><button>Contact</button></a>
       <a href="more.html"><button>More</button></a>
     </nav>
+    <div class="sidebar1"></div>
+    <div class="sidebar2"></div>
     <main>
       <br><b>May 6, 2025</b>
       <p>A lot of work was done on the website today.</p>
