Removed "index.html" from page link

--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
   </head>
   <body class="news-body">
     <nav>
-      <a href="index.html"><button>Home</button></a>
+      <a href="/"><button>Home</button></a>
       <a href="news.html"><button>News</button></a>
       <a href="https://linktr.ee/rhyswilliams" target="_blank"><button>Contact</button></a>
       <a href="more.html"><button>More</button></a>
@@ -17,7 +17,7 @@
     <main>
       <br><b>May 6, 2025</b>
       <p>A lot of work was done on the website today.</p>
-      <p>I managed to start a <a href="index.html#mc_embed_shell">mailing list</a>!</p>
+      <p>I managed to start a <a href="/#mc_embed_shell">mailing list</a>!</p>
       <p>My <a href="https://www.patreon.com/c/user?u=72179631" target="_blank">Patreon</a> was created and the Contact page was replaced with my new <a href="https://linktr.ee/rhyswilliams" target="_blank">Linktree</a>.</p>
       <p>I did some serious research into distribution and made a final decision.</p>
       <p>I joined some artist/production Facebook groups.</p>
