--- a/more.html
+++ b/more.html
@@ -7,7 +7,7 @@
   </head>
   <body class="more-body">
     <nav>
-      <a href="index.html"><button>Home</button></a>
+      <a href="/"><button>Home</button></a>
       <a href="news.html"><button>News</button></a>
       <a href="https://linktr.ee/rhyswilliams" target="_blank"><button>Contact</button></a>
       <a href="more.html"><button>More</button></a>
