Removed .html from links

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <title>Rhys Williams</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
     <link rel="stylesheet" type="text/css" href="//cdn-images.mailchimp.com/embedcode/classic-061523.css">
-    <link rel="icon" href="8bit.png">
+    <link rel="icon" href="/8bit.png">
   </head>
   <body>
     <div class="banner">
       <nav>
         <a href="/"><button>Home</button></a>
-        <a href="news.html"><button>News</button></a>
+        <a href="/news"><button>News</button></a>
         <a href="https://linktr.ee/rhyswilliams" target="_blank"><button>Contact</button></a>
-        <a href="more.html"><button>More</button></a>
+        <a href="/more"><button>More</button></a>
       </nav>
     </div>
     <div class="sidebar1"></div>
@@ -22,10 +22,10 @@
       <p class="descriptor">Singer, songwriter, producer, and multi-instrumentalist</p>
       <div class="song-box-container">
         <div class="song-box">
-          <br><img src="images/springtime.jpg" class="song-icon">
-          <br><a href="https://rhyswilliams.bandcamp.com/track/springtime" target="_blank"><img src="images/bandcamp.png" class="icon"></a>
-          <a href="https://soundcloud.com/rhyswilliams/springtime" target="_blank"><img src="images/soundcloud.png" class="icon"></a>
-          <a href="https://youtu.be/xNwy5hwzKbA" target="_blank"><img src="images/youtube.jpg" class="icon"></a>
+          <br><img src="/images/springtime.jpg" class="song-icon">
+          <br><a href="https://rhyswilliams.bandcamp.com/track/springtime" target="_blank"><img src="/images/bandcamp.png" class="icon"></a>
+          <a href="https://soundcloud.com/rhyswilliams/springtime" target="_blank"><img src="/images/soundcloud.png" class="icon"></a>
+          <a href="https://youtu.be/xNwy5hwzKbA" target="_blank"><img src="/images/youtube.jpg" class="icon"></a>
           <div class="song-box-info">
             <p>Springtime</p>
             <p>★★★☆☆</p>
@@ -34,10 +34,10 @@
           <p class="write-date">Aug 28, 2017</p>
         </div>
         <div class="song-box">
-          <br><img src="images/youre-gone.jpg" class="song-icon">
-          <br><a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><img src="images/bandcamp.png" class="icon"></a>
-          <a href="https://soundcloud.com/rhyswilliams/youre-gone" target="_blank"><img src="images/soundcloud.png" class="icon"></a>
-          <a href="https://youtu.be/mKC6StyvP3s" target="_blank"><img src="images/youtube.jpg" class="icon"></a>
+          <br><img src="/images/youre-gone.jpg" class="song-icon">
+          <br><a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><img src="/images/bandcamp.png" class="icon"></a>
+          <a href="https://soundcloud.com/rhyswilliams/youre-gone" target="_blank"><img src="/images/soundcloud.png" class="icon"></a>
+          <a href="https://youtu.be/mKC6StyvP3s" target="_blank"><img src="/images/youtube.jpg" class="icon"></a>
           <div class="song-box-info">
             <p>You're Gone</p>
             <p>★★★★☆</p>
@@ -46,10 +46,10 @@
           <p class="write-date">Feb 16, 2015</p>
         </div>
         <div class="song-box">
-          <br><img src="images/rain-demo.jpg" class="song-icon">
-          <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="images/bandcamp.png" class="icon"></a>
-          <a href="https://soundcloud.com/rhyswilliams/rain-demo" target="_blank"><img src="images/soundcloud.png" class="icon"></a>
-          <a href="https://youtu.be/l-Ne2hvspPc" target="_blank"><img src="images/youtube.jpg" class="icon"></a>
+          <br><img src="/images/rain-demo.jpg" class="song-icon">
+          <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="/images/bandcamp.png" class="icon"></a>
+          <a href="https://soundcloud.com/rhyswilliams/rain-demo" target="_blank"><img src="/images/soundcloud.png" class="icon"></a>
+          <a href="https://youtu.be/l-Ne2hvspPc" target="_blank"><img src="/images/youtube.jpg" class="icon"></a>
           <div class="song-box-info">
             <p>Rain (Demo)</p>
             <p>★★★☆☆</p>
