Removed .html from links

--- a/more/index.html
+++ b/more/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <title>Rhys Williams</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" href="8bit.png">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
+    <link rel="icon" href="/8bit.png">
   </head>
   <body class="more-body">
     <nav>
       <a href="/"><button>Home</button></a>
-      <a href="news.html"><button>News</button></a>
+      <a href="/news"><button>News</button></a>
       <a href="https://linktr.ee/rhyswilliams" target="_blank"><button>Contact</button></a>
-      <a href="more.html"><button>More</button></a>
+      <a href="/more"><button>More</button></a>
     </nav>
     <div class="sidebar1"></div>
     <div class="sidebar2"></div>
