--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
         <a href="/more"><button>More</button></a>
       </nav>
     </div>
-    <div class="sidebar1"></div>
-    <div class="sidebar2"></div>
+    <div class="sidebar1">
+      <img class="sb-logo" src="/images/logo.png">
+      <a href="/"><div class="sb-box" style="background-color: #b1abe0">Home</div></a>
+      <a href="/news"><div class="sb-box" style="background-color: #abbfe0;">News</div></a>
+      <a href="https://linktr.ee/rhyswilliams" target="_blank"><div class="sb-box" style="background-color: #a5c68e;">Contact</div></a>
+      <a href="/more"><div class="sb-box" style="background-color: #cdd094;">More</div></a>
+    </div>
+    <div class="sidebar2">
+      <a href="https://rhyswilliams.bandcamp.com/track/springtime" target="_blank"><div class="sb-box" style="background-color: #947771;">Springtime</div></a>
+      <a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><div class="sb-box" style="background-color: #0a0a07; color: white;">You're Gone</div></a>
+      <a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><div class="sb-box" style="background-color: #888682;">Rain (Demo)</div></a>
+    </div>
     <main>
       <p class="title-text">RHYS WILLIAMS</p>
       <p class="descriptor">Singer, songwriter, producer, and multi-instrumentalist</p>
