Made logo clickable

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </nav>
     </div>
     <div class="sidebar1">
-      <img class="sb-logo" src="/images/logo.png">
+      <a href="/"><img class="sb-logo" src="/images/logo.png"></a>
       <a href="/"><div class="sb-box" style="background-color: #b1abe0">Home</div></a>
       <a href="/news"><div class="sb-box" style="background-color: #abbfe0;">News</div></a>
       <a href="https://linktr.ee/rhyswilliams" target="_blank"><div class="sb-box" style="background-color: #a5c68e;">Contact</div></a>
